# drone-interception-simulation

./: CMakeLists.txt  README.md  run.sh  shell.nix
models/shahed/: model.config  model.sdf
models/shahed136/: model.config  model.sdf
plugins/: CMakeLists.txt  DefendPNPlugins.cc  EnemyLinearTrajPlugin.cc
plugins/defense/: DefenseCoordinatorPlugin.cc
plugins/shahed/: ShahedPlugin.cc
pn_algorithm/: spherical_pn_sim.py  test.py
scripts/: dev_shell.sh  run_gazebo.sh
worlds/: defense.world  shahed_test.world
